# gapp

./: main.py  pyproject.toml
front/: package-lock.json  package.json  webpack.config.js
front/src/: App.jsx  cache.jsx  index.jsx
front/src/canvas/: AddLink.jsx  AddNode.jsx  AttrTable.jsx  Canva.jsx  CanvasNavbar.jsx  EditLink.jsx  ExtraAttr.jsx  Legend.jsx  Link.jsx  Node.jsx  RemoveLink.jsx  RemoveNode.jsx
front/src/gql/: mutations.jsx  query.jsx
front/src/reactiveVariables/: rVar.jsx
mutations/: create_link.py  create_node.py  delete_link.py  delete_node.py  edit_link.py
query/: get_jsonable_date.py  get_list_node_labels.py  get_list_node_labels_from_db.py  get_possible_link_names_from_db.py
